# flow

./: .gitignore  AGENT.md  AGENTS.md  BUILD.md  Flow.spec  README.md  keys.txt  pyproject.toml  pytest.ini
deploy/linux/: build_appimage.sh  build_deb.sh  build_rpm.sh  flow.spec  install.sh
deploy/linux/DEBIAN/: control
deploy/windows/: FlowInstaller.iss
src/flow/: __init__.py  main.py
src/flow/domain/: hotspot.py  project.py  score_sheet.py  song.py
src/flow/repository/: __init__.py  project_repository.py
src/flow/services/: config_service.py  slide_converter.py  slide_manager.py
src/flow/ui/: __init__.py  main_window.py  project_launcher.py  settings_dialog.py  song_manager_dialog.py  styles.py  undo_commands.py
src/flow/ui/display/: __init__.py  display_window.py
src/flow/ui/editor/: __init__.py  hotspot_popover.py  lyric_editor_panel.py  score_canvas.py  slide_preview_panel.py  song_list_widget.py  verse_selector.py
src/flow/ui/live/: __init__.py  live_controller.py
src/flow/ui/screens/: home_screen.py  project_screen.py
tests/: conftest.py
tests/domain/: __init__.py  test_hotspot.py  test_project.py  test_score_sheet.py  test_song.py
tests/repository/: __init__.py  test_project_repository.py
tests/services/: test_config_service.py  test_slide_manager.py
tests/ui/: __init__.py  test_drag_drop.py  test_hotspot_popover.py  test_live_controller.py  test_live_pip.py  test_song_list_widget.py
